fixed wrap header

--- a/src/components/IndexProperties.css
+++ b/src/components/IndexProperties.css
@@ -1,18 +1,17 @@
 .indexPropertyContainer {
-
 }
 
-.indexheader
-{
+.indexheader {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-right: 5rem;
   margin-left: 5rem;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .btn {
-
   padding: 1rem 2rem;
   display: block;
   text-align: center;
@@ -23,7 +22,8 @@
   color: white;
   border-radius: 0.5rem;
   margin-bottom: 2.5rem;
-  
+  display: flex;
+  align-items: center;
 }
 
 .btn:hover {
@@ -41,4 +41,3 @@
   gap: 1.5rem;
   padding: 1rem;
 }
-
